OpenJMLTest/test/gitbug636/expected
test/gitbug636/Test.java:4: error: no suitable constructor found for String(String,StandardCharsets)
    //@   requires new String(s, cs) != null;
                   ^
    constructor String.String(byte[],int) is not applicable
      (argument mismatch; String cannot be converted to byte[])
    constructor String.String(byte[],String) is not applicable
      (argument mismatch; String cannot be converted to byte[])
    constructor String.String(byte[],Charset) is not applicable
      (argument mismatch; String cannot be converted to byte[])
    constructor String.String(AbstractStringBuilder,Void) is not applicable
      (argument mismatch; String cannot be converted to AbstractStringBuilder)
    constructor String.String(byte[],byte) is not applicable
      (argument mismatch; String cannot be converted to byte[])
Operation not performed because of parse or type errors
Note: Some input files use unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
Note: Some messages have been simplified; recompile with -Xdiags:verbose to get full output
1 error
